# chatbot_api

./: .ebignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
.platform/hooks/prebuild/: instructions.sh
deployment/: Dockerfile  Dockerfile.testing  entrypoint.sh
envs/: .env.sample
src/: main.py
src/api/: router.py
src/api/healthcheck/: endpoints.py  schemas.py
src/api/v1/: exceptions.py
src/api/v1/chatbot/: endpoints.py  schemas.py  services.py
src/core/bots/: base.py  openai.py  schemas.py
src/core/settings/: __init__.py  base.py  development.py  local.py  production.py  testing.py
src/core/utils/: environment.py
src/db/base/: storage.py
src/db/postgres/: session.py  storage.py
src/models/: __init__.py  base.py  chatbot.py  enums.py
src/tests/: conftest.py
src/tests/chatbot/v1/: test_endpoints.py  test_openai_errors.py  test_services.py
src/tests/unit/: test_localtime.py  test_models.py  test_postgres_storage.py
src/utils/: localtime.py
